Dodgier but better theming to prevent flicker

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+:root {
+  --color-background: #fff;
+}
+
+[data-theme="dark"] {
+  --color-background: #121212;
+}
+
 html {
   padding: 0;
   margin: 0;
@@ -6,6 +14,7 @@ html {
 }
 
 body {
+  background-color: var(--color-background);
   padding: 0;
   margin: 0;
   overflow-y: scroll;
